# mcp-obsidian

./: LICENSE  README.md  copilot-instructions.md  openapi.yaml  pyproject.toml  run-mcp-obsidian.ps1
.agents/skills/obs-cli/: SKILL.md
docs/: api-reference.md  architecture.md  cli-reference.md
docs/superpowers/plans/: 2026-04-10-cli-obsidian.md
docs/superpowers/specs/: 2026-04-10-cli-obsidian-design.md
skills/obs-cli/: SKILL.md
src/cli_obsidian/: __init__.py  __main__.py  cli.py  output.py
src/mcp_obsidian/: __init__.py  obsidian.py  server.py  tools.py
tests/: __init__.py
tests/cli_obsidian/: __init__.py  test_cli.py
