[project]
name = "mcp-obsidian"
version = "0.2.1"
description = "MCP server to work with Obsidian via the remote REST plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.1.0",
    "pip_system_certs",
    "python-dotenv>=1.0.1",
    "click>=8.0.0",
    "httpx[http2]>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=9.0.3"]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"
obs = "cli_obsidian:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM"]
ignore = ["T201", "SIM117", "E402"]  # SIM117: nested with clearer in tests; E402: imports after load_dotenv

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "recommended"
reportMissingTypeStubs = false
